# vrdt

./: .dir-locals.el  .gitignore  Makefile  cabal.project  default.nix  stack.yaml
causal-vrdt/: .gitignore  Doctest.hs  package.yaml
causal-vrdt/lib/: Causal  Causal.hs
crdtoa/: .gitignore  Doctest.hs  Main.hs  README.md  crdtoa.cabal
crdtoa/lib/: Crdtoa.hs  DemoApp.hs
crdtoa/lib/Control/Concurrent/STM/: Extras.hs
crdtoa/lib/Crdtoa/: API.hs  Application.hs  Log.hs  Server.hs  Types.hs
crdtoa/lib/Crdtoa/Server/: Store.hs
crdtoa/lib/Servant/: Extras.hs
examples/collaborate/: collaborate.cabal
examples/collaborate/src/: Main.hs
examples/event/: event.cabal
examples/event/src/: Main.hs
examples/event/src/Event/: Types.hs
examples/max/: max.cabal
examples/max/src/: Main.hs
kwik-client/: .gitignore  kwik-client.cabal  stack.yaml
kwik-client/src/Kwik/: Client.hs
kwik-core/: .gitignore  kwik-core.cabal
kwik-core/src/Kwik/: API.hs  Types.hs
kwik-core/src/Kwik/API/: V0.hs
kwik-server/: .gitignore  ChangeLog.md  kwik-server.cabal
kwik-server/src/Kwik/: Server.hs
kyowon-client/: ChangeLog.md  Main.hs  README.md  kyowon-client.cabal
kyowon-client/lib/Kyowon/: Client.hs
kyowon-client/lib/Kyowon/Client/: Log.hs
kyowon-client/src/Kyowon/: Client.hs  Reflex.hs
kyowon-core/: ChangeLog.md  README.md  kyowon-core.cabal
kyowon-core/lib/Kyowon/Core/: API.hs  Types.hs
kyowon-core/lib/Kyowon/Core/Types/: Internal.hs
kyowon-core/lib/Servant/: Extras.hs
kyowon-core/src/Kyowon/: API.hs  Types.hs
kyowon-core/src/Kyowon/API/: V0.hs
kyowon-reflex/: .gitignore  kyowon-reflex.cabal
kyowon-reflex/lib/Kyowon/Client/: Reflex.hs
kyowon-reflex/lib/Kyowon/Reflex/: Client.hs  Common.hs  Next.hs  Time.hs
kyowon-reflex/lib/Kyowon/Reflex/VRDT/: CausalTree.hs  LWW.hs
kyowon-reflex/lib/Kyowon/Reflex/Vty/: Widget.hs
kyowon-server/: .gitignore  Main.hs  README.md  kyowon-server.cabal
kyowon-server/lib/Kyowon/: Server.hs
kyowon-server/lib/Kyowon/Server/: Store.hs
kyowon-server/src/Kyowon/: Server.hs
kyowon-server/src/Kyowon/Server/: Store.hs
lib/: Crdtoa.hs
lib/Crdtoa/: Server.hs
vrdt/: stack.yaml  vrdt.cabal
vrdt/bench/: Generators.hs  Main.hs  Types.hs
vrdt/src/: ProofCombinators.hs
vrdt/src/Event/: Types.hs  Types4.hs  Types5.hs
vrdt/src/Liquid/: ProofCombinators.hs
vrdt/src/Liquid/Data/: List.hs  Map.hs  Maybe.hs
vrdt/src/Liquid/Data/List/: Props.hs
vrdt/src/Liquid/Data/Map/: Props.hs
vrdt/src/VRDT/: CausalTree.hs  Class.hs  ClassD.hs  Internal.hs  LWW.hs  LWWD.hs  Max.hs  Min.hs  MultiSet.hs  NonCausal.hs  Sum.hs  TwoPMap.hs  TwoPMapD.hs  Types.hs
vrdt/src/VRDT/CausalTree/: Eq.hs  Internal.hs  Lemmas.hs  NEq.hs
vrdt/src/VRDT/Class/: Proof.hs  TH.hs
vrdt/src/VRDT/Data/: Map.hs  Maybe.hs
vrdt/src/VRDT/MultiSet/: Internal.hs  Proof.hs
vrdt/src/VRDT/Props/: Map.hs
vrdt/src/VRDT/TwoPMap/: Internal.hs  LemmaAA.hs  LemmaAAEq.hs  LemmaAANeq.hs  LemmaAD.hs  LemmaAI.hs  LemmaDA.hs  LemmaDD.hs  LemmaDI.hs  LemmaIA.hs  LemmaIAC.hs  LemmaIANeq.hs  LemmaID.hs  LemmaII.hs  P0.hs  Types.hs
