name: crdtoa
version: 0
license: PublicDomain
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , aeson
                      , bytestring
                      , containers
                      , http-api-data
                      , http-client
                      , servant
                      , servant-client
                      , servant-server
                      , text
                      , time
                      , wai-extra
                      , warp
  default-language:     Haskell2010
  hs-source-dirs:       lib

  exposed-modules:      Paths_crdtoa
                      , Crdtoa
                      , Crdtoa.API
                      , Crdtoa.Application
                      , Crdtoa.Server
  other-modules:

test-suite crdtoa_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, crdtoa, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs

executable crdtoa
  build-depends:        base, crdtoa
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Main.hs
