name: kyowon-client
version: 0
author: PLR
maintainer: code@curious.software
copyright: 2019 PLR
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , async
                      , cereal
                      , http-client
                      , http-client-tls
                      , kyowon-core
                      , servant
                      , servant-client
                      , stm
                      , time
  default-language:     Haskell2010
  hs-source-dirs:       lib

  exposed-modules:      Paths_kyowon_client
                      , Kyowon.Client
                      , Kyowon.Client.Log
  other-modules:

test-suite kyowon-client_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, kyowon-client, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs

executable kyowon-client_demo
  build-depends:        base, kyowon-client
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Main.hs
