name: kyowon-core
version: 0
author: PLR
maintainer: code@curious.software
copyright: 2019 PLR
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , aeson
                      , binary
                      , bytestring
                      , cereal
                      , servant
                      , stm
                      , text
                      , time
                      , uuid
                      , uuid-types
  default-language:     Haskell2010
  hs-source-dirs:       lib

  exposed-modules:      Paths_kyowon_core
                      , Control.Concurrent.STM.Extras
                      , Kyowon.Core.API
                      , Kyowon.Core.Types
                      , Kyowon.Core.Types.Internal
                      , Servant.Extras
  other-modules:

test-suite kyowon-core_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, kyowon-core, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs
