name: kyowon-reflex
version: 0
author: James Parker
maintainer: jp@jamesparker.me
copyright: 2019 James Parker
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , aeson
                      , kyowon-client
                      , reflex
                      , vrdt
  default-language:     Haskell2010
  hs-source-dirs:       lib

  exposed-modules:      Paths_kyowon_reflex
                      , Kyowon.Client.Reflex
  other-modules:

test-suite kyowon-reflex_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, kyowon-reflex, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs
