name: kyowon-reflex
version: 0
author: James Parker
maintainer: jp@jamesparker.me
copyright: 2019 James Parker
-- license: TODO
-- license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , aeson
                      , kyowon-client
                      , kyowon-core
                      , ref-tf
                      , reflex
                      , reflex-vty
                      , semialign
                      , time
                      , these
                      , transformers
                      , vrdt
                      , vty
                      , witherable
  default-language:     Haskell2010
  hs-source-dirs:       lib
  extensions:           FlexibleContexts
                        FlexibleInstances
                        GADTs
                        LambdaCase
                        MultiParamTypeClasses
                        RankNTypes
                        RecursiveDo
                        ScopedTypeVariables
                        TypeFamilies

  exposed-modules:      Paths_kyowon_reflex
                      , Kyowon.Reflex.Client
                      , Kyowon.Reflex.Common
                      , Kyowon.Reflex.Next
                      , Kyowon.Reflex.Time
                      , Kyowon.Reflex.VRDT.CausalTree
                      , Kyowon.Reflex.VRDT.LWW
                      , Kyowon.Reflex.Vty.Widget
  other-modules:
  ghc-options:        -Wall -Wno-name-shadowing -Wno-orphans

test-suite kyowon-reflex_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, kyowon-reflex, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs
