name: kyowon-server
version: 0
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

-- https://www.haskell.org/cabal/users-guide/developing-packages.html#pkg-field-data-files
data-files:

library
  build-depends:        base
                      , containers
                      , kyowon-core
                      , servant
                      , servant-server
                      , stm
                      , wai-extra
                      , warp
  default-language:     Haskell2010
  hs-source-dirs:       lib

  exposed-modules:      Paths_kyowon_server
                      , Kyowon.Server
                      , Kyowon.Server.Store
  other-modules:

test-suite kyowon-server_test
  type:                 exitcode-stdio-1.0
  build-depends:        base, kyowon-server, doctest, QuickCheck
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Doctest.hs

executable kyowon-server
  build-depends:        base, kyowon-server
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:       .
  main-is:              Main.hs
